--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Aides Drug"
-author: "Put your name here!"
-date: "put the date here"
+author:  Aylin Torres
+date: 10/08/24
 output: html_document
 ---
 
@@ -21,6 +21,16 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
 
+$h_0$: The vaccine is not effective in preventing women from contracting aids.
+$h_A$: The vaccine is effective in preventing women from contracting aids.
+
+
+```{r}
+women <- triUmp[triUmp$gender=='F',]
+women 
+```
+
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -31,9 +41,24 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
+```{r}
+barchartGC(~infected + treatment,data=women)
+barchartGC(~infected + treatment,data=women, type="percent")
+```
+
+among women who contracted aids, most of them had undergone treatment. Therefore the treatment does not appear to be effective.
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+
+```{r}
+table1 <-xtabs(~infected + treatment, data=women)
+rowPerc(table1)
+colPerc(table1)
+```
+Among those who got aids,58.82% of them received treatment.
 
 ## Inferential Results
 
